# shadow-stack

./: .clang-format  .clangd.yaml  CMakeLists.txt  CppCon-2025.md  LICENSE  README.md  code::dive-2024.md  shst++.cpp  shst.c
examples/: CMakeLists.txt  README.md  backtrace-test.c  buggy-lib-instrumented.c  buggy-lib-instrumented.cpp  buggy-lib.c  buggy-lib.cpp  do-stuff.cpp  do-stuff.h  example-instrumented.c  example-instrumented.cpp  example.c  example.cpp  preload.cpp
src/: CMakeLists.txt  basic-test.cpp  basic-test.h  callee_traits-test.cpp  callee_traits.cpp  callee_traits.hpp  main.cpp  shadow-stack-common.h  shadow-stack-detail.h  shadow-stack.cpp  shadow-stack.h  shadow-stack.hpp
